--- a/Media Project/Media Project/App/View/Base.lproj/Main.storyboard
+++ b/Media Project/Media Project/App/View/Base.lproj/Main.storyboard
@@ -78,6 +78,111 @@
             </objects>
             <point key="canvasLocation" x="2799.2366412213742" y="203.52112676056339"/>
         </scene>
+        <!--Movie Detail View Controller-->
+        <scene sceneID="DMp-VW-o6V">
+            <objects>
+                <viewController storyboardIdentifier="MovieDetailViewController" id="QxJ-PE-vob" customClass="MovieDetailViewController" customModule="Media_Project" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WDB-C4-dve">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="yQn-lk-UCU" userLabel="table View">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="QTf-OB-Xsj" userLabel="headerView">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="356"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.65000000000000002" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7WH-2w-OCn">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="200"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="200" id="NZr-Xj-QWz"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nX6-1q-OBA">
+                                            <rect key="frame" x="30" y="45" width="100" height="150"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="nX6-1q-OBA" secondAttribute="height" multiplier="1:1.5" id="M03-Ak-fMG"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OX8-cL-O7G">
+                                            <rect key="frame" x="30" y="15" width="0.0" height="25"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="25" id="7Kk-9h-S5O"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" systemColor="systemBackgroundColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wcj-XK-dUe">
+                                            <rect key="frame" x="16.000000000000004" y="220" width="41.333333333333343" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hw9-eH-1Tf">
+                                            <rect key="frame" x="20" y="243" width="373" height="1"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="5fT-BF-BaJ"/>
+                                                <constraint firstAttribute="height" constant="1" id="J1N-AF-AoJ"/>
+                                            </constraints>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6fR-YQ-NtM">
+                                            <rect key="frame" x="20" y="252.00000000000003" width="353" height="20.333333333333343"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstItem="Wcj-XK-dUe" firstAttribute="leading" secondItem="QTf-OB-Xsj" secondAttribute="leading" constant="16" id="0P0-hS-f9p"/>
+                                        <constraint firstItem="nX6-1q-OBA" firstAttribute="bottom" secondItem="7WH-2w-OCn" secondAttribute="bottom" constant="-5" id="26X-bt-mlh"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="6fR-YQ-NtM" secondAttribute="bottom" constant="20" id="2gR-nx-Iov"/>
+                                        <constraint firstItem="OX8-cL-O7G" firstAttribute="leading" secondItem="QTf-OB-Xsj" secondAttribute="leading" constant="30" id="3ta-1y-gdr"/>
+                                        <constraint firstItem="6fR-YQ-NtM" firstAttribute="top" secondItem="Hw9-eH-1Tf" secondAttribute="bottom" constant="8" id="4df-L0-qjU"/>
+                                        <constraint firstItem="7WH-2w-OCn" firstAttribute="leading" secondItem="QTf-OB-Xsj" secondAttribute="leading" id="5Gf-64-bqK"/>
+                                        <constraint firstItem="Wcj-XK-dUe" firstAttribute="top" secondItem="7WH-2w-OCn" secondAttribute="bottom" constant="20" id="5Qy-GI-90W"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Wcj-XK-dUe" secondAttribute="trailing" constant="20" id="7Su-Nm-rde"/>
+                                        <constraint firstAttribute="trailing" secondItem="6fR-YQ-NtM" secondAttribute="trailing" constant="20" id="D35-UJ-W7Z"/>
+                                        <constraint firstItem="nX6-1q-OBA" firstAttribute="top" secondItem="OX8-cL-O7G" secondAttribute="bottom" constant="5" id="J0O-q3-ImB"/>
+                                        <constraint firstAttribute="trailing" secondItem="7WH-2w-OCn" secondAttribute="trailing" id="Oza-BP-Slb"/>
+                                        <constraint firstItem="6fR-YQ-NtM" firstAttribute="leading" secondItem="QTf-OB-Xsj" secondAttribute="leading" constant="20" id="RU0-aw-fNA"/>
+                                        <constraint firstItem="Hw9-eH-1Tf" firstAttribute="top" secondItem="Wcj-XK-dUe" secondAttribute="bottom" constant="2" id="Xuz-Ym-dne"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="OX8-cL-O7G" secondAttribute="trailing" constant="20" id="apZ-D9-ESI"/>
+                                        <constraint firstAttribute="trailing" secondItem="Hw9-eH-1Tf" secondAttribute="trailing" id="h7p-d5-UKU"/>
+                                        <constraint firstItem="Hw9-eH-1Tf" firstAttribute="leading" secondItem="QTf-OB-Xsj" secondAttribute="leading" constant="20" id="kzi-9S-uuG"/>
+                                        <constraint firstItem="nX6-1q-OBA" firstAttribute="leading" secondItem="QTf-OB-Xsj" secondAttribute="leading" constant="30" id="pSQ-IC-z5f"/>
+                                        <constraint firstItem="OX8-cL-O7G" firstAttribute="top" secondItem="QTf-OB-Xsj" secondAttribute="top" constant="15" id="qku-PL-cq1"/>
+                                        <constraint firstItem="7WH-2w-OCn" firstAttribute="top" secondItem="QTf-OB-Xsj" secondAttribute="top" id="rWU-zc-Aol"/>
+                                    </constraints>
+                                </view>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="pUp-Fp-R8S"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="yQn-lk-UCU" firstAttribute="leading" secondItem="pUp-Fp-R8S" secondAttribute="leading" id="1mf-pC-hjh"/>
+                            <constraint firstItem="yQn-lk-UCU" firstAttribute="top" secondItem="pUp-Fp-R8S" secondAttribute="top" id="5WN-FP-bPb"/>
+                            <constraint firstItem="pUp-Fp-R8S" firstAttribute="trailing" secondItem="yQn-lk-UCU" secondAttribute="trailing" id="VlZ-gU-nRP"/>
+                            <constraint firstItem="pUp-Fp-R8S" firstAttribute="bottom" secondItem="yQn-lk-UCU" secondAttribute="bottom" id="ZA7-0S-Rq2"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="backImageView" destination="7WH-2w-OCn" id="g7F-Ty-nYp"/>
+                        <outlet property="divider" destination="Hw9-eH-1Tf" id="thS-Zb-jun"/>
+                        <outlet property="overViewLabel" destination="6fR-YQ-NtM" id="3ot-H6-u97"/>
+                        <outlet property="overViewTitleLabel" destination="Wcj-XK-dUe" id="KP7-Kr-Faa"/>
+                        <outlet property="posterImageView" destination="nX6-1q-OBA" id="b4V-t9-yNp"/>
+                        <outlet property="tableView" destination="yQn-lk-UCU" id="YFm-MR-NyY"/>
+                        <outlet property="titleLabel" destination="OX8-cL-O7G" id="gK6-5s-xWc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wAe-zj-sGk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3719.8473282442746" y="203.52112676056339"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="mLA-Ji-pdB">
             <objects>
@@ -94,11 +199,11 @@
             </objects>
             <point key="canvasLocation" x="2799.2366412213742" y="901.4084507042254"/>
         </scene>
-        <!--Watchlist-->
+        <!--Movies-->
         <scene sceneID="LpD-Z3-SnB">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DaE-GJ-OMZ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Watchlist" image="rectangle.on.rectangle.angled" catalog="system" id="t8S-1F-itR"/>
+                    <tabBarItem key="tabBarItem" title="Movies" image="rectangle.on.rectangle.angled" catalog="system" id="t8S-1F-itR"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="K5O-cK-wIo">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
