온보딩 뷰 완성, 최초 실행 시 분기 로직 적용

--- a/Media Project/Media Project/App/View/Base.lproj/Main.storyboard
+++ b/Media Project/Media Project/App/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1Gq-IH-Pe4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -240,7 +240,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="E3q-2q-KVo">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="1Gq-IH-Pe4" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBarVC" automaticallyAdjustsScrollViewInsets="NO" id="1Gq-IH-Pe4" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Fz0-EQ-Fjm">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
